--- a/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
+++ b/1.-Python/1.-Snail-and-Well/snail-and-well.ipynb
@@ -33,7 +33,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "well_height=125\n",
+    "daily_distance=30\n",
+    "nightly_distance=-20\n",
+    "snail_position=0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,7 +52,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "days=0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,7 +68,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "while snail_position<well_height:\n",
+    "    snail_position+=daily_distance\n",
+    "    snail_position+=nightly_distance\n",
+    "    days+=1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -75,7 +87,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"The snail escaped in\", days, \"days\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -161,7 +175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
