--- a/1.-Python/1.-Snail-and-Well/Untitled2.ipynb
+++ b/1.-Python/1.-Snail-and-Well/Untitled2.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The snail will escape in 11 days.\n"
+     ]
+    }
+   ],
    "source": [
     "well_height=125\n",
     "daily_distance=30\n",
@@ -12,14 +20,98 @@
     "snail_position=0\n",
     "days=0\n",
     "\n",
-    "while snail_position<well_height:\n",
+    "while snail_position<=well_height:\n",
     "    snail_position+=daily_distance\n",
-    "    while snail_position<well_height:\n",
-    "        days+=1\n",
-    "    snail_position+=nightly_distance\n",
+    "    days+=1\n",
+    "    if snail_position<=well_height:\n",
+    "        snail_position+=nightly_distance\n",
+    "\n",
+    "print(\"The snail will escape in\", days, \"days.\")\n",
     "\n",
     "\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The snail will escape in 5 days.\n"
+     ]
+    }
+   ],
+   "source": [
+    "well_height=125\n",
+    "advance_cm=[30,21,33,77,44,45,23,45,12,34,55]\n",
+    "nightly_distance=-20\n",
+    "snail_position=0\n",
+    "days=0\n",
+    "\n",
+    "while snail_position<=well_height:\n",
+    "    days+=1\n",
+    "    snail_position+=advance_cm[days]\n",
+    "    if snail_position<=well_height:\n",
+    "        snail_position+=nightly_distance\n",
+    "\n",
+    "print(\"The snail will escape in\", days, \"days.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It would take 6 days.\n"
+     ]
+    }
+   ],
+   "source": [
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "nightly_distance = 20\n",
+    "snail_position = 0\n",
+    "days = 0\n",
+    "\n",
+    "while snail_position <= well_height:\n",
+    "    snail_position += advance_cm[days]\n",
+    "    if snail_position <= well_height:\n",
+    "        snail_position -= nightly_distance\n",
+    "    days += 1\n",
+    "    \n",
+    "print(\"It would take {} days.\".format(days))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The maximum displacement in a day is 57 cm.\n",
+      "The minimum displacement in a day is 1 cm.\n"
+     ]
+    }
+   ],
+   "source": [
+    "advance_cm = [30, 21, 33, 77, 44, 45, 23, 45, 12, 34, 55]\n",
+    "nightly_distance = -20\n",
+    "\n",
+    "max_displacement=(max(advance_cm[:days])+nightly_distance)\n",
+    "min_displacement=(min(advance_cm[:days])+nightly_distance)\n",
+    "\n",
+    "print(\"The maximum displacement in a day is\", max_displacement, \"cm.\")\n",
+    "print(\"The minimum displacement in a day is\", min_displacement, \"cm.\")\n"
    ]
   },
   {
@@ -35,18 +127,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.2"
   }
  },
  "nbformat": 4,
